<resources>
    <string name="app_name">Prueba de Ingreso</string>

    <string name="search_name">Buscar Usuario</string>
    <string name="username">Username</string>
    <string name="user_phone">Phone</string>
    <string name="user_email">Email</string>
    <string name="button_text">Ver publicaciones</string>

    <string name="DetalledeUsuario">Detalles de Usuario</string>
    <string name="nombreLocal">Nombre</string>
    <string name="descripcion">Descripción</string>
    <string name="pub">Publicaciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="ver">VER PUBLICACIONES</string>
    <string name="emptyList">List is Empty</string>


</resources>