<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:background="@color/white"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:theme="@style/Theme.PruebaDeIngreso"
    android:maxWidth="500dp">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/colorPrimary"
        android:drawablePadding="10dp"
        android:textSize="22sp"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_vertical"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_phone"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        app:drawableStartCompat="@drawable/ic_phone" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_email"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/user_phone"
        android:layout_margin="5dp"
        android:paddingBottom="5dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        app:drawableStartCompat="@drawable/ic_mail" />

    <Button
        android:id="@+id/pub_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/user_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/button_text"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:backgroundTint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>