<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/whitesmoke"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/DetalledeUsuario"
                android:textColor="@color/white"
                android:textStyle="bold|italic"
                android:textSize="25sp"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical|center"/>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/snow"
                android:layout_margin="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:textSize="25sp"
                        android:id="@+id/nombre_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:textStyle="bold"
                        android:text="@string/username"
                        android:padding="10dp"
                        app:drawableStartCompat="@drawable/ic_user"
                        android:drawablePadding="10dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/snow"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="20sp"
                        android:id="@+id/phone_detail"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:textStyle="bold"
                        android:text="@string/user_phone"
                        android:padding="10dp"
                        app:drawableStartCompat="@drawable/ic_phone"
                        android:drawablePadding="10dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/snow"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="20sp"
                        android:id="@+id/email_detail"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:textStyle="bold"
                        android:text="@string/user_email"
                        android:padding="10dp"
                        app:drawableStartCompat="@drawable/ic_mail"
                        android:drawablePadding="10dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/snow"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/pub"
                        android:textColor="@color/white"
                        android:textStyle="bold|italic"
                        android:textSize="25sp"
                        android:background="@color/colorPrimary"
                        android:gravity="center_vertical|center"/>


                    <ListView
                        android:textSize="20sp"
                        android:id="@+id/list_detail"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:textStyle="bold"
                        android:text="@string/user_phone"
                        android:padding="10dp"
                        app:drawableStartCompat="@drawable/ic_mail"
                        android:drawablePadding="10dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</androidx.cardview.widget.CardView>