<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.UserDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        app:navigationIcon="?attr/homeAsUpIndicator"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/whitesmoke"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/name_detail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:layout_weight="3"
                            android:drawablePadding="5dp"
                            android:padding="10dp"
                            android:text="@string/username"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:drawableStartCompat="@drawable/ic_user"
                            android:gravity="center_vertical"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/phone_detail"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:layout_weight="3"
                            android:drawablePadding="10dp"
                            android:padding="10dp"
                            android:text="@string/user_phone"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            app:drawableStartCompat="@drawable/ic_phone"
                            android:gravity="center_vertical"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/email_detail"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:layout_weight="3"
                            android:drawablePadding="10dp"
                            android:padding="10dp"
                            android:text="@string/user_email"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            app:drawableStartCompat="@drawable/ic_mail"
                            android:gravity="center_vertical"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/whitesmoke">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/pubs"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:background="@color/colorPrimary"
                            android:gravity="center_vertical|center"
                            android:text="@string/pub"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold|italic"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <ProgressBar
                            android:id="@+id/progressBar"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            tools:progress="40"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:indeterminate="true"
                            android:visibility="gone"
                            android:layout_marginTop="20dp"
                            android:indeterminateTint="@color/black"
                            android:layout_centerVertical="true"
                            app:layout_constraintTop_toBottomOf="@id/pubs"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycler_view_pubs"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:layout_constrainedHeight="true"
                            tools:listitem="@layout/publish_item"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/pubs"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>